--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link href="https://fonts.googleapis.com/css?family=Monoton&display=block" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Monoton|Lato&display=block" rel="stylesheet">
     <title>The Clubhouse</title>
   </head>
   <body>
